# nbmetaclean

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  404.html  Makefile  README.md  index.html  mkdocs.yaml  noxfile.py  noxfile_conda.py  noxfile_conda_lint.py  noxfile_lint.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  requirements_test_extra.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  tests.yml
docs/: README.md
docs/overrides/partials/: copyright.html
search/: search_index.json
src/nbmetaclean/: __init__.py  app.py  app_check.py  app_clean.py  check.py  clean.py  core.py  helpers.py  types.py  typing.py  version.py
tests/: test_app_check.py  test_app_clean.py  test_check.py  test_clean.py  test_core.py  test_get_nbnames.py  test_read_write.py
tests/test_nbs/: .test_nb_2_meta.ipynb  test_nb_1.ipynb  test_nb_2.ipynb  test_nb_2_clean.ipynb  test_nb_3_ec.ipynb
