[metadata]
name = nbmetaclean
version = attr: nbmetaclean.version.__version__
author = Yasyrev Andrei
author_email = a.yasyrev@gmail.com
description = Clean jupyter notebooks. Remove metadata and execution counts.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ayasyrev/nbmetaclean
license = apache2
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nbmetaclean=nbmetaclean.app_clean:app_clean
    nbclean=nbmetaclean.app_clean:app_clean
    nbcheck=nbmetaclean.app_check:app_check
pipx.run =
    nbmetaclean=nbmetaclean.app_clean:app_clean
    nbclean=nbmetaclean.app_clean:app_clean
    nbcheck=nbmetaclean.app_check:app_check
